<resources>
    <string name="app_name">Haggler</string>
    <string name="action_settings">Settings</string>
    <string name="title_text_city">Select City</string>
    <string name="title_activity_cities">essentialCitiesActivity</string>
    <string name="essentials_product">Select Product</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short/Password cannot contain ":"</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="DescriptionText4">You can go back to the previous screen by hitting the back button on Android phones.</string>
    <string name="DescriptionText3">Select the Item for which you want to look up information. In the market city mode, you can upload a new product and it\'s information</string>
    <string name="DescriptionText2">Then, select the city which you are in/ the item is placed</string>
    <string name="DescriptionText1">First, select whether you want to look up the products of every day essential items such as milk and bread or look up the price of items in markets.</string>
    <string name="reputationinfo">Beware you can only create new items once you have reached a certain \'reputation\'. You can gain reputation by contributing prices to items.</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
</resources>
