<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ming.haggler.HelpActivity">

    <TextView
        android:text="Help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="28sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/DescriptionText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/descriptionText1"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="?attr/actionMenuTextColor" />

    <TextView
        android:text="@string/DescriptionText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionText3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:text="@string/DescriptionText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:id="@+id/descriptionText4"
        android:textColor="@android:color/background_dark"
        android:layout_below="@+id/descriptionText3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/DescriptionText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/descriptionText2"
        android:textColor="@android:color/background_dark"
        android:layout_below="@+id/descriptionText1"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/descriptionText4"
        android:id="@+id/descriptionText5"
        android:layout_alignParentStart="true"
        android:text="@string/reputationinfo"/>
</RelativeLayout>
